chat-admin.html: changed placeholders and inputs names.
chatScript.js: modified updateOnlineUserList() for blocking HTML tags - security reason

UserStorageService.java: changed not allowed method ".getFirst()"  to ".get(0)" in getUserByNickname method.

TODO: cleanup code,simplify code